--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 
 /* ============================================================================
     
-    UPLAB.RU 2012
+    Uplab.ru 2012
     http://uplab.ru
     
 ============================================================================= */
@@ -12,4 +12,4 @@
 @import "themed";
 @import "masterclasses";
 @import "plugin-support";
-@import "screen";
+//@import "screen";
