--- a/sass/_screen.scss
+++ b/sass/_screen.scss
@@ -1,7 +1,7 @@
 /* ============================================================================
     Import from screen.scss 
     
-    14.MEDIA QUERIES
+    4.MEDIA QUERIES
 ============================================================================= */
 
 @media screen and (min-width:1281px) {
@@ -336,3 +336,12 @@
 
     /* end media print */
 }
+
+
+/*
+* __  __  __    _   
+* \ \/  \/ /__ (_) __  __                /\
+*  \  /\  / -_)| |(__ (__            /\ /  \/\
+*   \/  \/\___||_| __) __) css helper  /\/\/\ \
+*        https://github.com/dimanech/weiss   \ \
+*/   
