--- a/sass/_themed.scss
+++ b/sass/_themed.scss
@@ -1,11 +1,13 @@
 /* ============================================================================
-    Design specific
+    
+    3. THEMED (Design specific rules)
     
     Import from THEMED.scss
+    
 ============================================================================= */
 
 /* ============================================================================
-    Header
+    3.1 Header
 ============================================================================= */
 
 #header {
@@ -49,15 +51,20 @@
   
 }
 
-
 /* ============================================================================
-    Main
+    3.2 Main
 ============================================================================= */
 
-
+/* ============================================================================
+    3.3 Aside
+============================================================================= */
 
 /* ============================================================================
-    Footer
+    3.4 Pages
+============================================================================= */
+
+/* ============================================================================
+    3.5 Footer
 ============================================================================= */
 
 #footer {
