--- a/sass/_themed.scss
+++ b/sass/_themed.scss
@@ -101,3 +101,25 @@
   }
   
 }
+
+/* ============================================================================
+    Other
+============================================================================= */
+
+/* Opera speed dial minimized */
+@media screen and (view-mode: minimized) {
+    body {
+        background: #c10000;
+        color: #fff;
+    }
+
+    #main-container,
+    #navigation,
+    #header #logo {
+        display: none;
+    }
+
+    #header #site-name a {
+        color: #fff;
+    }
+}
