--- a/sass/_basic-and-layout.scss
+++ b/sass/_basic-and-layout.scss
@@ -14,12 +14,11 @@
 // 13px-0.813%
 // 12px-75%
 
-$base-fsz: 1em;
 $main-bg-color: #fff;
 $main-fg-color: #ccc;
 $base-color: #434343;
-$link-color: #ffff00;
-$emph-c: #eb001b;
+$ln-color: #09f;
+$ln-h-color: lighten($ln-color, 15%);
 $conatiner-width: 974px;
 $main-width: percentage(724px / $conatiner-width);
 $aside-width: percentage(227px / $conatiner-width);
@@ -86,79 +85,79 @@ blockquote, q {
 ============================================================================= */
 
 h1, h2, .h1, .h2, h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
-    line-height: 1.2em;
+  line-height: 1.2em;
 }
 
 h1, h2, .h1, .h2 {
 }
 
 h1, .h1, .aside h2, .aside .h2 {
-    font-size: 2.14em;
-    margin: 0 0 1em;
+  font-size: 2.14em;
+  margin: 0 0 1em;
 }
 
 h2, .h2 {
-    font-size: 1.5em;
-    margin: .83em 0;
+  font-size: 1.5em;
+  margin: .83em 0;
 }
 
 h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 h3, .h3 {
-    font-size: 1.17em;
-    line-height: 1.429em;
-    margin: 1em 0;
+  font-size: 1.17em;
+  line-height: 1.429em;
+  margin: 1em 0;
 }
 
 h4, .h4 {
-    font-size: 1em;
-    margin: 1.3em 0;
+  font-size: 1em;
+  margin: 1.3em 0;
 }
 
 h5, .h5, h6, .h6 {
-    font-size: 1em;
-    font-style: italic;
-    margin: 1.67em 0;
+  font-size: 1em;
+  font-style: italic;
+  margin: 1.67em 0;
 }
 
 h6, .h6 {
-    font-weight: normal;
+  font-weight: normal;
 }
 
 p, pre, blockquote, table {
-    margin: 0 0 1em 0;
+  margin: 0 0 1em 0;
 }
 
 p {
-    font-size: 1em;
+  font-size: 1em;
 }
 
 blockquote {
-    margin-left: 4.2em;
-    font-style: italic;
+  margin-left: 4.2em;
+  font-style: italic;
 }
 
 strong, b {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 em, i, cite {
-    font-style: italic;
+  font-style: italic;
 }
 
 // NOTE: link pseudoclases order -- link, visited, hover, active
 
 a {
-  color: $link-color;
+  color: $ln-color;
 
   &:visited {
-    color: $link-color;
+    color: $ln-color;
   }
 
   &:hover, &:active {
-    color: lighten($link-color, 20%);
+    color: $ln-h-color;
   }
 
   &[href^="callto"], &[href^="mailto"] {
@@ -167,28 +166,28 @@ a {
 }
 
 img {
-    font-size: 1em;
-    color: #444; // alt text style
-    -ms-interpolation-mode: bicubic; // improve IE's resizing of images
-    position: relative;
-    // Chrome outline around img in a; ie5-6 floating image disappearing fix
+  font-size: 1em;
+  color: #444; // alt text style
+  -ms-interpolation-mode: bicubic; // improve IE's resizing of images
+  position: relative;
+  // Chrome outline around img in a; ie5-6 floating image disappearing fix
 
-   a &, a:visited & {
-     border: 0 none;
-   }
+  a &, a:visited & {
+    border: 0 none;
+  }
 
-   #main p & {
-     float: left;
-     padding: 0 1em 0 0;
-   }
+  #main p & {
+    float: left;
+    padding: 0 1em 0 0;
+  }
 
-   &::-moz-selection {
-     background: transparent;
-   }
+  &::-moz-selection {
+    background: transparent;
+  }
 
-   &::selection {
-     background: transparent;
-   }
+  &::selection {
+    background: transparent;
+  }
 
 }
 
@@ -211,8 +210,8 @@ body {
 }
 
 *:target {
-    border-bottom: 3px solid rgba(0, 0, 0, .1);
-    -webkit-animation: focused 2s;
+  border-bottom: 3px solid rgba(0, 0, 0, .1);
+  -webkit-animation: focused 2s;
 }
 
 /* ============================================================================
@@ -220,8 +219,8 @@ body {
 ============================================================================= */
 
 ul, ol, dl {
-    margin: 0 1.5em 1.5em 0;
-    padding-left: 1.5em;
+  margin: 0 1.5em 1.5em 0;
+  padding-left: 1.5em;
 }
 
 ul, ol {
@@ -231,39 +230,39 @@ ul, ol {
 }
 
 ul li {
-    list-style: disc outside;
+  list-style: disc outside;
 }
 
 ol li {
-    list-style: decimal outside;
+  list-style: decimal outside;
 }
 
 dl dt, dfn {
-    font-weight: bold;
-    font-style: italic;
+  font-weight: bold;
+  font-style: italic;
 }
 
 dl dd {
-    margin-left: 1.5em;
+  margin-left: 1.5em;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    table-layout: fixed;
-    word-wrap: break-word;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  table-layout: fixed;
+  word-wrap: break-word;
 }
 
 caption {
-    font-size: 1.429em;
-    padding-bottom: .429em;
-    border-bottom: 1px solid #ccc;
+  font-size: 1.429em;
+  padding-bottom: .429em;
+  border-bottom: 1px solid #ccc;
 }
 
 th, tr, td {
-    vertical-align: middle;
-    padding: 0 .429em;
+  vertical-align: middle;
+  padding: 0 .429em;
 }
 
 thead {
@@ -281,7 +280,7 @@ thead {
 }
 
 tbody {
-    border-top: 1px solid #ccc;
+  border-top: 1px solid #ccc;
 
   td {
     border-bottom: 1px solid #ccc;
@@ -289,9 +288,9 @@ tbody {
 }
 
 tfoot {
-    text-align: center;
-    font-style: italic;
-    border-top: 1px solid #ccc;
+  text-align: center;
+  font-style: italic;
+  border-top: 1px solid #ccc;
 }
 
 /* ============================================================================
@@ -299,28 +298,24 @@ tfoot {
 ============================================================================= */
 
 form {
-  border:none;
+  border: none;
 }
 
 button, input, select, textarea {
-    font: normal normal 1em /1.429em Arial, FreeSans, sans-serif;
-    margin: 0;
-    vertical-align: baseline;
+  font: normal normal 1em /1.429em #{$sans};
+  margin: 0;
+  vertical-align: baseline;
 }
 
 label {
-    display: block;
-    font-weight: normal;
+  display: block;
+  font-weight: normal;
 }
 
 input {
   &[type="button"], &[type="submit"], &[type="reset"], &[type="image"] {
     cursor: default;
     -webkit-appearance: button;
-
-    &:hover, &:focus {
-      background-color: red;
-    }
   }
 
   &[type="text"], &[type="password"] {
@@ -340,8 +335,7 @@ input {
   }
 
   &[type="search"] {
-     -webkit-appearance: none;
-    // fix webKit (x)-button and resistance
+    -webkit-appearance: none;
     -moz-box-sizing: content-box;
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
@@ -351,8 +345,10 @@ input {
     }
   }
 
-  // themed form
+}
 
+
+  // themed form
   input[type="text"],
   input[type="password"],
   input[type="search"],
@@ -361,8 +357,13 @@ input {
     border-color: #777 #ccc #ccc;
     background: #fff;
 
-    &:hover, &:focus {
-      border-color: $link-color;
+    &:hover {
+      border-color:#777;
+    } 
+    
+    &:focus {
+      border-color: $ln-color;
+      outline: none;
     }
   }
 
@@ -374,46 +375,44 @@ input {
     border: 1px solid #2d2d2d;
 
     &:hover, &:focus {
-      border-color: $link-color;
+      border-color: $ln-color;
     }
   }
-
-}
 
 button {
 
 }
 
 button::-moz-focus-inner, input::-moz-focus-inner {
-    // Remove inner padding and border in FF3/4
-    border: 0;
-    padding: 0;
+  // Remove inner padding and border in FF3/4
+  border: 0;
+  padding: 0;
 }
 
 textarea {
-   padding: .2em .429em;
-   overflow: auto;
-   vertical-align: top;
-   resize: vertical;
+  padding: .2em .429em;
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
 }
 
 select {
 }
 
 optgroup {
-    font-weight: normal;
-    background: #ccc;
+  font-weight: normal;
+  background: #ccc;
 }
 
 fieldset {
-    border: 1px solid #ccc;
-    margin: 0 0 1.4375em;
-    padding: 1.5em;
+  border: 1px solid #ccc;
+  margin: 0 0 1.4375em;
+  padding: 1.5em;
 }
 
 legend {
-    border: 0;
-    padding: 0;
+  border: 0;
+  padding: 0;
 }
 
 .ie-old {
@@ -452,40 +451,40 @@ input:invalid, textarea:invalid {
 ============================================================================= */
 
 sup, sub {
-    position: relative;
-    font-size: .8em;
+  position: relative;
+  font-size: .8em;
 }
 
 sup {
-    top: -0.5em;
+  top: -0.5em;
 }
 
 sub {
-    bottom: -0.25em;
+  bottom: -0.25em;
 }
 
 mark {
-    background-color: #ff9;
-    color: #000;
+  background-color: #ff9;
+  color: #000;
 }
 
 hr {
-    background: #666;
-    border: none;
-    clear: both;
-    float: none;
-    height: 1px;
-    margin: 0 0 1.4375em;
-    width: 100%;
+  background: #666;
+  border: none;
+  clear: both;
+  float: none;
+  height: 1px;
+  margin: 0 0 1.4375em;
+  width: 100%;
 }
 
 u {
-    text-decoration: none;
-    // remove textdecoration <u> for save <a> style, if <a> not mark by color
+  text-decoration: none;
+  // remove textdecoration <u> for save <a> style, if <a> not mark by color
 }
 
 figure {
-    margin: 0;
+  margin: 0;
 }
 
 /* ============================================================================
@@ -493,93 +492,98 @@ figure {
 ============================================================================= */
 
 body {
-    font: normal normal 87.5%/1.3em #{$sans};
-    color: $base-color;
-    background: $main-bg-color;
-    overflow-y: scroll; // force scroll
+  font: normal normal 87.5%/1.3em #{$sans};
+  color: $base-color;
+  background: $main-bg-color;
+  overflow-y: scroll; // force scroll
 
-   .ie-old & {
-     overflow-y: auto; // ie sticky footer fix
+  .ie-old & {
+    overflow-y: auto; // ie sticky footer fix
    }
 }
 
-/* header */
+/* header
+   --------------------------------------------------------------------------*/
 
 #header {
-    width: 100%;
+  width: 100%;
 }
 
-/* main */
+/* main
+   --------------------------------------------------------------------------*/
 
 #main-container {
-    background-color: $main-fg-color;
+  background-color: $main-fg-color;
 }
 
 #main-inner {
-    width: $conatiner-width;
-    margin: 0 auto;
-    position: relative;
-    background-color: $main-bg-color;
+  width: $conatiner-width;
+  margin: 0 auto;
+  position: relative;
+  background-color: $main-bg-color;
 }
 
 #main {
-    margin-bottom: 2em;
-    width: 100%;
+  margin-bottom: 2em;
+  width: 100%;
 }
 
 body.two-sidebars #main {
-    float: left;
-    margin-left: $aside-width+2.5%;
-    width: $two-sidebars-main-width;
+  float: left;
+  margin-left: $aside-width+2.5%;
+  width: $two-sidebars-main-width;
 }
 
 body.sidebar-first #main {
-    float: right;
-    width: $main-width;
+  float: right;
+  width: $main-width;
 }
 
 body.sidebar-second #main {
-    float: left;
-    margin: 0;
-    padding: 0;
-    width: $main-width;
+  float: left;
+  margin: 0;
+  padding: 0;
+  width: $main-width;
 }
 
-/* sidebars */
+/* sidebars
+   --------------------------------------------------------------------------*/
 
 body.two-sidebars #sidebar-first {
-    float: left;
-    margin-left: -$main-width;
-    width: $aside-width;
+  float: left;
+  margin-left: -$main-width;
+  width: $aside-width;
 }
 
 body.two-sidebars #sidebar-second {
-    float: right;
-    width: $aside-width;
+  float: right;
+  width: $aside-width;
 }
 
 body.sidebar-first .aside, body.sidebar-second .aside {
-    float: left;
-    width: $aside-width;
+  float: left;
+  width: $aside-width;
 }
 
 body.sidebar-second .aside {
-    float: right;
+  float: right;
 }
 
-/* footer */
+/* footer
+   --------------------------------------------------------------------------*/
 
 #footer {
-    clear: both;
-    overflow: hidden;
+  clear: both;
+  overflow: hidden;
 }
 
-/* Styicky footer */
+/* Styicky footer
+   --------------------------------------------------------------------------*/
 
-/* pseudo sticky
- #main-container {
- min-height: 55em;
- } */
+// pseudo sticky
+// #main-container {
+// min-height: 55em;
+// }
 
 @media screen and (max-width: 2400px) {
 
@@ -605,4 +609,65 @@ $footer-height: 50px;
         position: relative;
         height: $footer-height;
     }
+}
+
+/* ============================================================================
+    Basic masterclasses
+============================================================================= */
+
+.clearfix {
+  &:after {
+    clear: both;
+    content: ".";
+    display: block;
+    height: 0;
+    font-size: 0;
+    visibility: hidden;
+  }
+
+  .ie-old & {zoom: 1;}
+}
+
+ul.flat {
+  margin: 0;
+  padding: 0;
+
+  li {
+    margin: 0;
+    list-style: none;
+    background:none;
+  }
+}
+
+.c-container {
+    width: $conatiner-width;
+    margin: 0 auto;
+}
+
+.block {
+    position: relative;
+}
+
+.left-side {
+    float:left;
+}
+
+.right-side {
+    float:right;
+}
+
+span.flush {
+    display:block;
+}
+
+.psln {
+  color: $ln-color;
+  text-decoration:none;
+  border-bottom: 1px dashed;
+  position: relative;
+  cursor: pointer;
+
+  &:hover, &:focus {
+    color: $ln-h-color;
+  }
 }
