--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,11 @@ dl dd {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+  border-width: 0;
   width: 100%;
   table-layout: fixed;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+  empty-cells: show; }
 
 caption {
   font-size: 1.429em;
